<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android MCP</string>
    <string name="service_running">服务运行中</string>
    <string name="service_stopped">服务已停止</string>
    <string name="start_service">启动服务</string>
    <string name="stop_service">停止服务</string>
    <string name="http_address">HTTP 地址</string>
    <string name="api_count">API 接口数</string>
    <string name="shell_status">Shizuku 状态</string>
    <string name="privilege_status">特权模式</string>
    <string name="mode_auto">自动</string>
    <string name="mode_shizuku">Shizuku</string>
    <string name="mode_root">Root</string>
    <string name="notification_channel_name">MCP 服务</string>
    <string name="notification_title">Android MCP 运行中</string>
    <string name="notification_text">HTTP 服务 :18080</string>
    <string name="authorize">授权</string>
    <string name="open_shizuku">打开 Shizuku</string>
</resources>
